# Automata

./: .gitignore  README.md
.github/workflows/: rust.yml
LL/: README.md
LL/python/: llk.py  test.py
LL/rust/: Cargo.toml  example.rs
LL/rust/examples/: basic.rs
LL/rust/src/: lib.rs  main.rs
LL/rust/tests/: test.rs
brainfuck/: HelloWord.bf  HelloWorld.bf  Makefile  README.md  brainfuck.c  brainfucki  brainfucki.c  brainfucki.h  brainfucki_all.c  buffer.c  buffer.h  stree.c  stree.h  utils.c  utils.h
brainfuck/anc/: Makefile  README.md
brainfuck/anc/docs/source/: BUFFER.rst  UTILS.rst
brainfuck/anc/src/: brainfucki.c  utils.c
brainfuck/docs/source/: STREE.rst  conf.py
brainfuck/examples/: HelloWorld.bf
brainfuck/include/: stree.h  utils.h
brainfuck/src/: brainfucki.c  stree.c
game_of_life/: Cargo.toml  README.md
game_of_life/examples/: basic.rs
game_of_life/src/: ansi_rust.rs  lib.rs
