[package]
name = "gol-lib"
version = "0.1.1"
edition = "2018"
license = "MPL-2.0"
authors = ["Damien Lejosne <damlejo6445@gmail.com>"]
readme = "README.md"
documention = "https://docs.rs/gol-lib/0.1.1"
repository = "https://github.com/Dalejosne/Automata/tree/main/game_of_life"
description = "A nice game of life package"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
